docs/tests/typing/bad/testfile-field-5.cpp

class S { public: int a; };
int main() { int x; x.a; }
